--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
+    "@mdi/font": "^7.4.47",
     "typescript": "^5.6.2"
   }
 }
