--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
+    "@pinia/nuxt": "^0.5.5",
     "@volar/language-server": "2.4.0-alpha.18",
     "@vue/language-server": "2.0.28",
     "nuxt": "^3.13.0",
@@ -22,5 +23,8 @@
   "devDependencies": {
     "@mdi/font": "^7.4.47",
     "typescript": "^5.6.2"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
