--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
+    "pinia-plugin-persistedstate": "^4.0.2",
     "typescript": "^5.6.2"
   },
   "overrides": {
