--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
+    "@nuxt/fonts": "^0.11.4",
     "@pinia/nuxt": "^0.11.1",
     "@primeuix/themes": "^1.1.2",
     "@primevue/forms": "^4.3.5",
