add DefaultPreset for PrimeVue theme configuration

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "md-editor-v3": "^4.21.0",
     "nuxt": "3.17.5",
     "primevue": "^4.3.5",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "latest",
     "vue-router": "latest"
   },
