--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/language-server": "2.2.10",
     "md-editor-v3": "^4.21.0",
     "nuxt": "3.17.5",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.5",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "latest",
