--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "dtos:dev": "npx swagger-typescript-api@13.1 generate -p http://localhost:3001/swagger/json -o ./composables/dtos --no-client --modular --clean-output"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
