--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/fonts": "^0.11.4",
     "@nuxtjs/i18n": "^9.5.6",
-    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.1",
     "@primeuix/themes": "^1.1.2",
     "@primevue/forms": "^4.3.5",
@@ -25,13 +25,13 @@
     "md-editor-v3": "^4.21.0",
     "nuxt": "3.17.5",
     "primeicons": "^7.0.0",
-    "primevue": "^4.3.5",
+    "primevue": "^4.3.4",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@primevue/nuxt-module": "^4.3.5",
+    "@primevue/nuxt-module": "^4.3.4",
     "pinia-plugin-persistedstate": "^4.3.0",
     "typescript": "^5.8.3"
   },
